# Yggdrasil-ng

./: Cargo.toml  Cross.toml  README.md
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  deb.yml  msi.yml  release.yml
contrib/cross/: Dockerfile.mips-musl  gcc-crt-wrapper.sh
contrib/deb/: postinst  postrm
contrib/mixnet_test/: README.md  interop_test.py
contrib/msi/: updateconfig.bat  yggdrasil-ng.wxs
contrib/systemd/: yggdrasil.service  yggdrasil.sysusers
crates/ironwood/: Cargo.toml  README.md
crates/ironwood/benches/: logging_overhead.rs
crates/ironwood/src/: bloom.rs  bloom_old.rs  config.rs  core.rs  crypto.rs  lib.rs  pathfinder.rs  peers.rs  router.rs  signed.rs  traffic.rs  types.rs  wire.rs
crates/ironwood/src/encrypted/: crypto.rs  mod.rs  session.rs
crates/ironwood/tests/: integration.rs
crates/ygg_stream/: Cargo.toml
crates/ygg_stream/src/: ffi.rs  lib.rs  messenger.rs
crates/yggdrasil/: Cargo.toml
crates/yggdrasil/src/: address.rs  admin.rs  config.rs  config_template.toml  core.rs  ctl.rs  ipv6rwc.rs  lib.rs  links.rs  main.rs  proto.rs  service.rs  tls_support.rs  tun.rs  version.rs  yggdrasilctl.rs
crates/yggdrasil/src/multicast/: advertisement.rs  mod.rs
crates/yggdrasil/src/transport/: mod.rs  quic.rs  tcp.rs  tls.rs  ws.rs  wss.rs
