[package]
name = "yggdrasil"
version = "0.1.0"
edition = "2021"
description = "Yggdrasil mesh networking daemon"

[[bin]]
name = "yggdrasil"
path = "src/main.rs"

[[bin]]
name = "yggdrasilctl"
path = "src/yggdrasilctl.rs"

[lib]
name = "yggdrasil"
path = "src/lib.rs"

[dependencies]
ironwood = { path = "../ironwood" }
tokio = { version = "1", features = ["full"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
time = { version = "0.3.47", features = ["macros"] }
tun-rs = { version = "2", features = ["async_tokio"] }
getopts = "0.2"
toml = "0.8"
hex = "0.4"
url = "2"
tokio-util = { version = "0.7", features = ["rt"] }
comfy-table = "7"
